# cpp-proj-maker

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  cpp-proj-maker.spec  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: release.yml
src/cpp_proj_maker/: main.py  project_config.py  project_maker.py
src/cpp_proj_maker/templates/: doc_doxyfile.txt  executable_cmake.txt  library_cmake.txt  license_file.txt  main_cmake.txt  sub_cmake.txt  test_cpp_cmake.txt  tests_cmake.txt
tests/: test_project_maker.py
